--- a/app/src/main/res/layout/activity_modifier.xml
+++ b/app/src/main/res/layout/activity_modifier.xml
@@ -1,9 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.yassine.exo1_preferencices.Modifier">
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textSize="16pt"
+        android:text="Modifier intervention" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Num d'intervention à modifier"
+        android:textColor="@color/md_red_700"
+        tools:text="Selectionner intervention" />
+
+    <Spinner
+        android:id="@+id/multi_spinner_num"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="10pt"
+        android:text="Veuiller selectionner les champs à modifier"
+        android:textColor="@color/primary" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Date d'intervention"
+        android:textColor="@color/md_red_700"
+        tools:text="Numero d'intervention" />
+
+    <EditText
+        android:id="@+id/num"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Numero"
+        android:inputType="number"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Date d'intervention"
+        android:textColor="@color/md_red_700"
+        tools:text="Nom plombier" />
+
+    <EditText
+        android:id="@+id/nomP"
+        android:layout_width="200dp"
+        android:hint="Nom plombier"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Type d'intervention"
+        android:textColor="@color/md_red_700"
+        tools:text="Type d'intervention" />
+
+    <Spinner
+        android:id="@+id/multi_spinner"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Date d'intervention"
+        android:textColor="@color/md_red_700"
+        tools:text="Date d'intervention" />
+
+    <DatePicker
+        android:id="@+id/datePicker2"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Modifier"
+        android:onClick="writeJson"/>
+
+</LinearLayout>
