--- a/app/src/main/res/layout/activity_modifier.xml
+++ b/app/src/main/res/layout/activity_modifier.xml
@@ -93,9 +93,9 @@
         />
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Modifier"
-        android:onClick="writeJson"/>
+        android:onClick="modifier"
+        android:text="Modifier" />
 
 </LinearLayout>
